6.14.4.3
    Misc:
        * Created ErrObj. Might get used; might not.

6.14.4.2    2023-01-13T15:38:04-0700
    ldmd(1):
        * Moved setting of "hiyaCalled" to top of HIYA service functions
        * Made ECONNRESET error a single INFO-level log message

    rtstats(1):
        * Made error reporting more robust
    
6.14.4.1    2023-01-05T10:47:36-0700
    ldmd(1):
        * Eliminated log messages when an upstream LDM process that was ACCEPTed terminates. This
          should reduce the number of log messages on the rtstats(1) mothership.

    Documentation:
        * More hyperlink corrections
        * Returned Coverity Scan badge to top-level, version-specific index.html

    Misc:
        * Removed lint found by Coverity Scan

    DevOps:
        * Enhanced "pre-commit" hook to vet the version ID in CHANGE_LOG and ensure a timestamp
          in CHANGE_LOG when committing to the main branch
        * Enhanced "OnPush.yml":
            * Vet the version ID in CHANGE_LOG and "configure.ac"
            * Update the "versions.html" file for LDM documentation on the artifacts server
        * Deleted "--disable-root-actions" from Coverity Scan target
        * Added deletion of /tmp/pqact_test.conf before creation due to /tmp having the "restricted
          deletion" bit set
        * Deleted use of CodeQL in OnPush.yml in favor of using Coverity Scan because it's better

6.14.3  2022-12-22T13:34:03-0700
    Documentation:
        * Fixed more links in HTML documentation

6.14.2	2022-12-20T15:32:36-0700
    Documentation:
        * Added missing graphic "product-queue.svg"
        * Fixed links in HTML documentation

6.14.1  2022-12-19T12:40:42-0700
    Installation:
        * Eliminated the configure(1)-script option "--disable-root-actions". Installation now
          proceeds as if this option were always specified. The "make install" step now prints a
          message at the end stating that the superuser (i.e., "root") must now execute the command