@@ -1,4 +1,7 @@
 6.14.4.3
+    ldmd(1):
+        * Replace some ERROR log messages with FATAL ones.
+
     Misc:
         * Created ErrObj. Might get used; might not.
 
